--- a/public/styles/Home.module.scss
+++ b/public/styles/Home.module.scss
@@ -8,17 +8,24 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
+  width: 100%;
 }
 
 .main {
-  padding: 5rem 0;
   flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  width: 100%;
+  padding-top: 140px;
 }
  
+.card{
+  width: 80%;
+  margin: auto;
+  padding-top: 50px;
+}
 
 @include desktop() {
   .grid {
